--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Create guest authors for Ghost blogs without needing to invite staff users."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ghost Guest Author Creator</title>
+    <meta property="og:title" content="Ghost Guest Author Creator">
+    <meta property="og:description" content="Create guest authors for Ghost blogs without needing to invite staff users.">
+    <meta property="og:image" content="%PUBLIC_URL%/meta.png">
+    <meta property="og:url" content="%PUBLIC_URL%">
+    <meta name="twitter:title" content="Ghost Guest Author Creator">
+    <meta name="twitter:description" content="Create guest authors for Ghost blogs without needing to invite staff users.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/meta.png">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
